Duplicating BOIDS emitter cause glitchy operation #38111

Closed
opened 2014-01-08 00:43:06 +01:00 by Atomic · 12 comments

System Information
Windows 7 64bit 8GB RAM
nVidia 460gtx

Blender Version
Broken: 2.69 2328f94
Worked: 2.67

Short description of error
Duplicating a mesh plane with a biods particle system causes Blender interface to not work correctly.

Exact steps for others to reproduce the error
I have attached a BLEND file.
Open the file and you will see a plane selected.
Press Play and observe the particle animation.
Press SHIFT-D to duplicate the plane and you will notice that the typical action does not happen. Typically when you duplicate an object you can position it with the mouse. In this scene, however, you can see the coordinates moving in the lower right hand corner of the 3D view but the duplicate plane is no where in sight. So click to lock in your duplication/move and you will see that the new duplicate resides on top of the original. Now press GY to grab the duplicate along the Y axis and it will jump snap to another location. So click to accept that and press Play to view the duplicate boids particle system and the particles no longer play correctly. Not like the way the particles move before the duplicate.
269_BOID_SHIPS_SCENE-1.blend

**System Information** Windows 7 64bit 8GB RAM nVidia 460gtx **Blender Version** Broken: 2.69 2328f94 Worked: 2.67 **Short description of error** Duplicating a mesh plane with a biods particle system causes Blender interface to not work correctly. **Exact steps for others to reproduce the error** I have attached a BLEND file. Open the file and you will see a plane selected. Press Play and observe the particle animation. Press SHIFT-D to duplicate the plane and you will notice that the typical action does not happen. Typically when you duplicate an object you can position it with the mouse. In this scene, however, you can see the coordinates moving in the lower right hand corner of the 3D view but the duplicate plane is no where in sight. So click to lock in your duplication/move and you will see that the new duplicate resides on top of the original. Now press GY to grab the duplicate along the Y axis and it will jump snap to another location. So click to accept that and press Play to view the duplicate boids particle system and the particles no longer play correctly. Not like the way the particles move before the duplicate. [269_BOID_SHIPS_SCENE-1.blend](https://archive.blender.org/developer/F63562/269_BOID_SHIPS_SCENE-1.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AtomP

Added subscriber: @AtomP

Added subscriber: @tchirac

Added subscriber: @tchirac

Not only does this append with BOIDS, but also with object whose both options "Rigid Body" and "Force field" are applied.

  • Add a cube
  • In Blender Render, "Physics" panel, select both "Force field" and "Rigid body"
  • shft+D
    => The simulation is glitchy

Lubuntu 12.04 64bit 4GB RAM
ATI

Not only does this append with BOIDS, but also with object whose both options "Rigid Body" and "Force field" are applied. - Add a cube - In Blender Render, "Physics" panel, select both "Force field" and "Rigid body" - shft+D => The simulation is glitchy __________________________ Lubuntu 12.04 64bit 4GB RAM ATI

No bug with 2.69 r60991
Bug with 2.69 r61025

No bug with 2.69 r60991 Bug with 2.69 r61025

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2014-01-15 19:58:17 +01:00

I've commited potential fix at df72d3c. Do you guys mind double-checking BOIDS works fine? Also, can you please upload test files which demonstrates issues with foce fields and rigid bodies?

I've commited potential fix at df72d3c. Do you guys mind double-checking BOIDS works fine? Also, can you please upload test files which demonstrates issues with foce fields and rigid bodies?

Seems the bug is fixed for me :)

Strangely enough, I don't manage to reproduce the same glitch with my "Forced" Rigid bodies any more... maybe I had an old particle system linked to them somehow ... ?

Thanks !!

Seems the bug is fixed for me :) Strangely enough, I don't manage to reproduce the same glitch with my "Forced" Rigid bodies any more... maybe I had an old particle system linked to them somehow ... ? Thanks !!

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Cool to have someone confirmed crash is fixed :) Since the issue you've mentioned is not reproduced yet i''l close the report. Feel free to inform me here or fire new report if more issues are discovered!

Thanks for the report and tests :)

Cool to have someone confirmed crash is fixed :) Since the issue you've mentioned is not reproduced yet i''l close the report. Feel free to inform me here or fire new report if more issues are discovered! Thanks for the report and tests :)
Author

I tried a recent build a with the test file I submitted and it does seem to be fixed as well.

Thanks!

I tried a recent build a with the test file I submitted and it does seem to be fixed as well. Thanks!

Thanks for the tests @AtomP :)

Thanks for the tests @AtomP :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38111
No description provided.