Potential fix for T38111: Duplicating BOIDS emitter cause glitchy operation

Need to reset cached KD tree when duplicating particle system.